# polars-q

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
polarq/: __init__.py  adverbs.py  coerce.py  env.py  errors.py  ipc.py  qsql.py  repl.py  tables.py  temporal.py  types.py  verbs.py
polarq/parser/: __init__.py  ast_nodes.py  lexer.py  pratt.py  qsql.py
polarq/transpiler/: __init__.py  builtins.py  loader.py  transpiler.py
scripts/: feature_report.py
tests/: conftest.py  test_evalq.py  test_parser.py  test_repl.py  test_snippets.py  test_transpiler_properties.py
