[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polarq"
version = "0.1.0"
description = "q/kdb+ semantics on Polars + Arrow Flight"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "pyarrow",
    "numpy",
    "lark",
]

[project.scripts]
polarq = "polarq.repl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["polarq*"]
